NATTQA-ENV/force-app/main/default/objects/HBI_Leads_Mapping_By_Org__mdt/HBI_Leads_Mapping_By_Org__mdt.object-meta.xml
<CustomObject>
    <label>HBI Leads Mapping By Org</label>
    <pluralLabel>HBI Leads Mapping By Org</pluralLabel>
</CustomObject>