NATTQA-ENV/force-app/main/default/objects/HBI_Leads_Mapping_By_Org__mdt/fields/Opportunity_Reason_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Reason_Field__c</fullName>
    <label>Opportunity Reason Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>