NATTQA-ENV/force-app/main/default/objects/HBI_Leads_Mapping_By_Org__mdt/fields/Status_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Status_Accepted__c</fullName>
    <defaultValue>&quot;Accepted&quot;</defaultValue>
    <label>Status Accepted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>