NATTQA-ENV/force-app/main/default/objects/HBI_Leads_Mapping_By_Org__mdt/fields/Status_Customer_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Status_Customer_Contacted__c</fullName>
    <defaultValue>&quot;Contacted&quot;</defaultValue>
    <label>Status Customer Contacted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>