NATTQA-ENV/force-app/main/default/objects/HBI_Leads_Mapping_By_Org__mdt/fields/Status_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Status_Rejected__c</fullName>
    <defaultValue>&quot;Unqualified&quot;</defaultValue>
    <label>Status Rejected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>