NATTQA-ENV/force-app/main/default/objects/HBI_Leads_Mapping_By_Org__mdt/fields/Status_Won__c.field-meta.xml
<CustomField>
    <fullName>Status_Won__c</fullName>
    <label>Status Won</label>
    <length>255</length>
    <type>Text</type>
</CustomField>