NATTQA-ENV/force-app/main/default/objects/HBI_Leads_Mapping_By_Org__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Lead_Reason_Field__c</columns>
    <columns>Opportunity_Reason_Field__c</columns>
    <columns>Status_Accepted__c</columns>
    <columns>Status_Customer_Contacted__c</columns>
    <columns>Status_Rejected__c</columns>
    <columns>Status_Lost__c</columns>
    <columns>Status_Won__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>